--- a/Task2/pom.xml
+++ b/Task2/pom.xml
@@ -7,6 +7,11 @@
     <groupId>Task2</groupId>
     <artifactId>Task2</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <dependencies>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+    </dependency>
+    </dependencies>
 </project>
